--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "strar"
+name = "changelogger"
 version = "0.1.0"
 description = ""
 authors = ["award28 <austin.ward@klaviyo.com>"]
 readme = "README.md"
 
 [tool.poetry.scripts]
-strar = "strar.main:app"
+strar = "changelogger.main:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
