--- a/.version_upgrade_config.yml
+++ b/.version_upgrade_config.yml
@@ -1,6 +1,6 @@
 files:
   - rel_path: other.txt
-    pattern: '* Version: {{ old_version.replace(".", "\.") }}'
+    pattern: '\* Version: {{ old_version }}'
     jinja: '* Version: {{ new_version }}'
 
   - rel_path: CHANGELOG.md
