--- a/.version_upgrade_config.yml
+++ b/.version_upgrade_config.yml
@@ -5,8 +5,19 @@ files:
 
   - rel_path: CHANGELOG.md
     pattern: '### \[Unreleased\]([\s\S]*)### \[{{ old_version }}]'
-    jinja_rel_path: .CHANGELOG.md.overview.jinja2
+    jinja: |
+      ### [Unreleased]
 
+      ### [{{ new_version }}] - {{ today }}
+      {% for name, notes in sections.items() -%}
+      {% if notes -%}
+      #### {{ name.title() }}
+      {% for note in notes -%}
+      - {{ note }}
+      {% endfor %}
+      {%- endif %}
+      {%- endfor %}
+      ### [{{ old_version }}]
   - rel_path: CHANGELOG.md
     pattern: '\[Unreleased\]:.*\n'
     jinja: |
