--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,13 @@ changelogger = "changelogger.main:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-typer = {extras = ["all"], version = "^0.7.0"}
+typer = "0.7.0"
+rich = "12.6.0"
+pydantic = "1.10.2"
+semver = "2.13.0"
+jinja2 = "3.1.2"
+pyyaml = "6.0"
+gitpython = "3.1.30"
 
 
 [build-system]
