--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["award28 <austin.ward@klaviyo.com>"]
 readme = "README.md"
 
 [tool.poetry.scripts]
-changelogger = "changelogger.main"
+changelogger = "changelogger.__main__:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
