All working except upgrade

--- a/assets/.changelogger.yml
+++ b/assets/.changelogger.yml
@@ -1,6 +1,8 @@
 changelog:
-  - pattern: '### \[Unreleased\]([\s\S]*)### \[{{ old_version }}]'
+  overview:
+    pattern: '### \[Unreleased\]([\s\S]*)### \[{{ old_version }}]'
     jinja_rel_path: .cl.overview.jinja2
 
-  - pattern: '\[Unreleased\]:.*\n'
+  links:
+    pattern: '\[Unreleased\]:.*\n'
     jinja_rel_path: .cl.links.jinja2
