--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "changelogger"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["award28 <austin.ward@klaviyo.com>"]
 readme = "README.md"
@@ -22,3 +22,17 @@ gitpython = "3.1.30"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+
+[tool.pycln]
+all = true
+
+[tool.isort]
+line_length = 79
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
