--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ gitpython = "3.1.30"
 pytest = "^7.2.1"
 freezegun = "^1.2.2"
 mypy = "^0.991"
+coverage = "^7.1.0"
 
 
 [build-system]
@@ -39,3 +40,7 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.coverage]
+    [tool.coverage.run]
+        source = ["changelogger"]
