--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "changelogger"
-version = "0.2.0"
+version = "0.2.1"
 description = ""
 authors = ["award28 <austin.ward@klaviyo.com>"]
 readme = "README.md"
@@ -17,6 +17,10 @@ semver = "2.13.0"
 jinja2 = "3.1.2"
 pyyaml = "6.0"
 gitpython = "3.1.30"
+pytest = "^7.2.1"
+freezegun = "^1.2.2"
+mypy = "^0.991"
+coverage = "^7.1.0"
 
 
 [build-system]
@@ -36,3 +40,7 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.coverage]
+    [tool.coverage.run]
+        source = ["changelogger"]
