--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "changelogged"
 version = "0.3.0"
-description = ""
+description = "Automated management of your CHANGELOG.md and other versioned files, following the principles of Keep a Changelog and Semantic Versioning."
 authors = ["award28 <austin.ward@klaviyo.com>"]
 readme = "README.md"
 
