--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,15 @@
 name = "changelogged"
 version = "0.3.1"
 description = "Automated management of your CHANGELOG.md and other versioned files, following the principles of Keep a Changelog and Semantic Versioning."
+license = "MIT"
 authors = ["award28 <austin.ward@klaviyo.com>"]
-readme = "README.md"
-
+maintainers = ["award28 <austin.ward@klaviyo.com>"]
+readme = "docs/README.md"
+repository = "https://github.com/award28/changelogger"
 packages = [
     { include = "changelogger" },
 ]
+keywords = ["changelog", "version", "semver", "changelogger"]
 
 [tool.poetry.scripts]
 changelogger = "changelogger.__main__:app"
