--- a/.github/ISSUE_TEMPLATE/workflows/continuous_integration.yml
+++ b/.github/ISSUE_TEMPLATE/workflows/continuous_integration.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - 'main'
       - 'release/**'
+  push:
+    branches:
+      - 'main'
+      - 'release/**'
 
 jobs:
   test:
