--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -22,6 +22,8 @@ jobs:
         python-version: '3.11'
     - name: Install Poetry
       uses: snok/install-poetry@v1
+    - name: Install Dependencies
+      run: poetry install
     - name: Run Tests
       run: |
         poetry run coverage run -m pytest
