--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     types:
       - opened
-
+    branches:
+      - 'main'
+      - 'release/**'
   push:
     branches:
       - 'main'
