Source venv first

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -111,7 +111,9 @@ jobs:
     #            install changelogger
     #----------------------------------------------
     - name: Check Versioned Files
-      run: pip install .
+      run: |
+        source .venv/bin/activate
+        pip install .
 
     #----------------------------------------------
     #         check the versioned files
