--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -113,4 +113,5 @@ jobs:
     - name: Check Versioned Files
       run: |
         source .venv/bin/activate
+        pip install .
         changelogger manage check
