--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -20,9 +20,20 @@ jobs:
         python-version: '3.11'
 
     #----------------------------------------------
+    #             load cached poetry
+    #----------------------------------------------
+    - name: Load cached Poetry installation
+      id: cached-poetry
+      uses: actions/cache@v3
+      with:
+        path: ~/.local  # the path depends on the OS
+        key: poetry-0  # increment to reset cache
+
+    #----------------------------------------------
     #  -----  install & configure poetry  -----
     #----------------------------------------------
     - name: Install Poetry
+      if: steps.cached-poetry.outputs.cache-hit != 'true'
       uses: snok/install-poetry@v1
       with:
         virtualenvs-create: true
