--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -3,6 +3,8 @@ name: "Continuous Integration"
 on:
   pull_request:
     branches: main
+  push:
+    branches: main
 
 jobs:
   test:
@@ -69,13 +71,16 @@ jobs:
     #----------------------------------------------
     #              get coverage
     #----------------------------------------------
-    - name: Get Coverage
-      uses: orgoro/coverage@v3
+    - uses: codecov/codecov-action@v3
       with:
-          coverageFile: coverage.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          thresholdAll: 0.9
-          thresholdNew: 0.9
+        files: ./coverage.xml
+    # - name: Get Coverage
+    #   uses: orgoro/coverage@v3
+    #   with:
+    #       coverageFile: coverage.xml
+    #       token: ${{ secrets.GITHUB_TOKEN }}
+    #       thresholdAll: 0.9
+    #       thresholdNew: 0.9
 
   check:
     runs-on: ubuntu-latest
