--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -71,16 +71,10 @@ jobs:
     #----------------------------------------------
     #              get coverage
     #----------------------------------------------
-    - uses: codecov/codecov-action@v3
+    - name: Get Coverage
+      uses: codecov/codecov-action@v3
       with:
         files: ./coverage.xml
-    # - name: Get Coverage
-    #   uses: orgoro/coverage@v3
-    #   with:
-    #       coverageFile: coverage.xml
-    #       token: ${{ secrets.GITHUB_TOKEN }}
-    #       thresholdAll: 0.9
-    #       thresholdNew: 0.9
 
   check:
     runs-on: ubuntu-latest
