--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -1,15 +1,13 @@
 name: Main Release
 run-name: "Main Release"
-on:
-  push:
-    branches:
-      - 'main'
+on: [push]
+
+permissions:
+  # Need permission to write to the Releases tab now.
+  # https://github.com/ncipollo/release-action/issues/208.
+  contents: write
 
 jobs:
-  permissions:
-    # Need permission to write to the Releases tab now.
-    # https://github.com/ncipollo/release-action/issues/208.
-    contents: write
   determine-if-deploy:
     runs-on: ubuntu-latest
     outputs:
