Add back for only main

--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -1,6 +1,9 @@
 name: Main Release
 run-name: "Main Release"
-on: [push]
+on:
+  push:
+    branches:
+      - 'main'
 
 permissions:
   # Need permission to write to the Releases tab now.
