--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Settings override for local development
+changelogger/conf/_settings_override.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
