--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "changelogged"
-version = "0.8.0"
+version = "0.9.0"
 description = "Automated management of your changelog and other versioned files, following the principles of Keep a Changelog and Semantic Versioning."
 license = "MIT"
 authors = ["award28 <austin.ward@klaviyo.com>"]
@@ -13,10 +13,11 @@ packages = [
 include = [
     { path = "assets" },
 ]
-keywords = ["changelog", "version", "semver", "changelogger"]
+keywords = ["changelog", "version", "semver", "changelogger", "changelogged"]
 
 [tool.poetry.scripts]
 changelogger = "changelogger.__main__:app"
+cl = "changelogger.__main__:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
