--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -1,5 +1,5 @@
-name: Continuous Deploy
-run-name: "Continuous Deploy"
+name: Continuous Deployment
+run-name: "Continuous Deployment"
 on:
   push:
     branches:
