--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,14 @@ semver = "2.13.0"
 jinja2 = "3.1.2"
 pyyaml = "6.0"
 gitpython = "3.1.31"
-pytest = "^7.2.1"
-freezegun = "^1.2.2"
-mypy = "^0.991"
 coverage = "^7.1.0"
 
+
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.2.1"
+mypy = "^1.0.1"
+freezegun = "^1.2.2"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
